# FEM_Project

./: .gitignore  CMakeLists.txt  Elem2d_4.cpp  Elem2d_4.h  ElemUniv.cpp  ElemUniv.h  Element.cpp  Element.h  GlobalSystemOfEquation.cpp  GlobalSystemOfEquation.h  Jakobian.h  Node.cpp  Node.h  Quadrature.cpp  Quadrature.h  grid.cpp  grid.h  includes.h  main.cpp  main.h
include/: ElemUniv.h  Element.h  GlobalSystemOfEquation.h  Node.h  grid.h  includes.h
src/: ElemUniv.cpp  Element.cpp  GlobalSystemOfEquation.cpp  Jakobian.cpp  Node.cpp  grid.cpp  main.cpp
